fix: Add more spacing to layout

--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,6 @@ header {
   padding: 1rem;
   width: 80%;
   margin: 0 auto;
-  background-color: var(--clr-secondary-lt);
   
 }
 
@@ -221,23 +220,27 @@ ol {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
+  grid-gap: 20px;
 }
 
 .article-card {
   text-decoration: none;
-  margin: 0.3rem;
+  margin: 0.5rem;
   background-color: var(--clr-secondary-lt);
   border-radius: var(--brdr-rad);
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
   text-align: center;
   min-height: 8rem;
 }
 
 .home-card {
   text-decoration: none;
-  margin: 0.3rem;
+  margin: 0.5rem;
   background-color: var(--clr-secondary-lt);
   border-radius: var(--brdr-rad);
   border-top-left-radius: 0;
+  border-top-right-radius: 0;
   text-align: center;
   min-height: 16rem;
 }
